--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -1,10 +1,10 @@
 [ServerSettings]
 DifficultyOffset=1.000000
 OverrideOfficialDifficulty=4.000000
-XPMultiplier=1.500000
-TamingSpeedMultiplier=5.000000
+XPMultiplier=2.000000
+TamingSpeedMultiplier=10.000000
 OxygenSwimSpeedStatMultiplier=1.000000
-HarvestAmountMultiplier=2.500000
+HarvestAmountMultiplier=5.00000
 PerPlatformMaxStructuresMultiplier=150.000000
 MaxPlatformSaddleStructureLimit=150
 DisableDinoDecayPvE=false
@@ -19,7 +19,7 @@ PreventTribeAlliances=false
 PreventDiseases=false
 NonPermanentDiseases=true
 AutoSavePeriodMinutes=60
-ServerCrosshair=false
+ServerCrosshair=true
 ServerForceNoHUD=false
 AllowThirdPersonPlayer=true
 AlwaysNotifyPlayerLeft=true
@@ -27,7 +27,7 @@ DontAlwaysNotifyPlayerJoined=false
 ShowMapPlayerLocation=false
 ServerHardcore=false
 KickIdlePlayersPeriod=2400
-MaxNumberOfPlayersInTribe=2
+MaxNumberOfPlayersInTribe=0
 BattleNumOfTribesToStartGame=15
 TimeToCollapseROD=9000
 BattleAutoStartGameInterval=60
@@ -52,6 +52,7 @@ RaidDinoCharacterFoodDrainMultiplier=1.000000
 ListenServerTetherDistanceMultiplier=1.000000
 RCONServerGameLogBuffer=600.000000
 AllowHitMarkers=True
+bUseCorpseLocator=true
 
 [/Script/ShooterGame.ShooterGameUserSettings]
 MasterAudioVolume=1.000000
@@ -67,7 +68,7 @@ FOVMultiplier=1.000000
 GroundClutterDensity=1.000000
 bFilmGrain=False
 bMotionBlur=True
-bUseDFAO=True
+DFAO=True
 bUseSSAO=True
 bShowChatBox=True
 bCameraViewBob=True
