--- a/Game.ini
+++ b/Game.ini
@@ -1,6 +1,7 @@
 [/Script/ShooterGame.ShooterGameMode]
 PGMapName=PGARK
 PGTerrainPropertiesString=MapSeed=999;LandscapeRadius=1;Water Frequency=5;Mountains Frequency=8;Mountains Slope=1;MountainsHeight=1;Turbulence Power=0.0125;Shore Slope=1;WaterLevel=-0.72;GrassDensity=1;JungleGrassDensity=0.02;ErosionIterations=200000;OceanFloorLevel=-1;SnowBiomeSize=0.3;RWBiomeSize=0.075;MountainBiomeStart=--0.55;MountainsTreeDensity=0.01;JungleBiomeStart=-0.65;IslandBorderCurveExp=4;MaxSpawnPointHeight=0.1;SnowGrassDensity=0.25;MountainGrassDensity=0.05;SnowMountainGrassDensity=0.15;UnderwaterObjectsDensity=0.5;SnowMountainsTreeDensity=0.01;TreeDensity=0.003;JungleTreeDensity=0.66;RedWoodTreeDensity=0.35;SnowTreeDensity=1;RedwoodGrassDensity=0.1;ShoreTreeDensity=0.05;SnowShoreTreeDensity=0.025;DeepWaterBiomesDepth=-0.24;InlandWaterObjectsDensity=0.5;ShorelineStartOffset=0.01;ShorelineThickness=0.0015;TerrainScaleMultiplier=(X=1f,Y=1f,Z=1f);SnowBiomeLocation=(X=0.2f,Y=0.2f);RWForestBiomeLocation=(X=0.5f,Y=0.5f);NorthRegion1Start=(X=0.25f,Y=0f);NorthRegion1End=(X=0.416f,Y=0.5f);NorthRegion2Start=(X=0.416f,Y=0f);NorthRegion2End=(X=0.582f,Y=0.5f);NorthRegion3Start=(X=0.582f,Y=0f);NorthRegion3End=(X=0.75f,Y=0f);SouthRegion1Start=(X=0.25f,Y=0.5f);SouthRegion1End=(X=0.416f,Y=1f);SouthRegion2Start=(X=0.416f,Y=0.5f);SouthRegion2End=(X=0.582f,Y=1f);SouthRegion3Start=(X=0.582f,Y=0.5f);SouthRegion3End=(X=0.75f,Y=1f);EastRegion1Start=(X=0.75f,Y=0f);EastRegion1End=(X=1f,Y=0.333f);EastRegion2Start=(X=0.75f,Y=0.333f);EastRegion2End=(X=1f,Y=0.666f);EastRegion3Start=(X=0.75f,Y=0.666f);EastRegion3End=(X=1f,Y=1f);WestRegion1Start=(X=0f,Y=0f);WestRegion1End=(X=0.25f,Y=0.333f);WestRegion2Start=(X=0f,Y=0.333f);WestRegion2End=(X=0.25f,Y=0.666f);WestRegion3Start=(X=0f,Y=0.666f);WestRegion3End=(X=0.25f,Y=1f)
+bPvEDisableFriendlyFire=true
 bPvEAllowTribeWar=true
 bPvEAllowTribeWarCancel=false
 bUseSingleplayerSettings=false
@@ -20,7 +21,7 @@ GlobalSpoilingTimeMultiplier=1.000000
 GlobalItemDecompositionTimeMultiplier=1.000000
 GlobalCorpseDecompositionTimeMultiplier=1.000000
 UseCorpseLifeSpanMultiplier=1.000000
-CropGrowthSpeedMultiplier=1.000000
+CropGrowthSpeedMultiplier=5.000000
 CropDecaySpeedMultiplier=1.000000
 LayEggIntervalMultiplier=1.000000
 PoopIntervalMultiplier=1.000000
