--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -5,6 +5,7 @@ XPMultiplier=2.000000
 TamingSpeedMultiplier=10.000000
 OxygenSwimSpeedStatMultiplier=1.000000
 HarvestAmountMultiplier=5.00000
+ActiveMods=731604991,630601751,719928795,821530042
 PerPlatformMaxStructuresMultiplier=150.000000
 MaxPlatformSaddleStructureLimit=150
 DisableDinoDecayPvE=false
