--- a/Game.ini
+++ b/Game.ini
@@ -87,3 +87,8 @@ SupplyCrateLootQualityMultiplier=5
 FishingLootQualityMultiplier=5
 CraftingSkillBonusMultiplier=1
 
+[ModInstaller]
+ModIDS=731604991
+ModIDS=630601751
+ModIDS=719928795
+ModIDS=821530042
